log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:37:22 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:3: error: ‘a’ undeclared (first use in this function)
   14 |   a
      |   ^
arraylist.c:14:3: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:14:4: error: expected ‘;’ before ‘return’
   14 |   a
      |    ^
      |    ;
   15 |     return NULL;
      |     ~~~~~~
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a621ec
Thu 30 Mar 2023 03:37:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
557bc64
Thu 30 Mar 2023 03:44:20 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:21: error: invalid initializer
   14 |   ArrayList lista = malloc(2 * sizeof(ArrayList));
      |                     ^~~~~~
arraylist.c:15:12: error: invalid operands to binary == (have ‘ArrayList’ {aka ‘struct ArrayList’} and ‘void *’)
   15 |   if(lista == NULL) return NULL;
      |            ^~
arraylist.c:16:8: error: invalid type argument of ‘->’ (have ‘ArrayList’ {aka ‘struct ArrayList’})
   16 |   lista->data = malloc(2 * sizeof(ArrayList));
      |        ^~
arraylist.c:17:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   17 |     return lista;
      |            ^~~~~
arraylist.c:18:1: error: control reaches end of non-void function [-Werror=return-type]
   18 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f226af4
